src/test/ui/feature-gates/underscore_const_names_feature_gate.rs
const _: () = (); //~ ERROR is unstable

fn main() {}
